force-app/main/default/objects/Zoom_Webhook_Event__c/Zoom_Webhook_Event__c.object-meta.xml
<CustomObject>
    <label>Zoom Webhook Event</label>
    <nameField>
        <label>Zoom Webhook Event</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zoom Webhook Event</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>