force-app/main/default/objects/Zoom_Webhook_Event__c/fields/Dedup_Key__c.field-meta.xml
<CustomField>
    <fullName>Dedup_Key__c</fullName>
    <description>Prevents duplicate processing.</description>
    <inlineHelpText>Unique key for deduplication.</inlineHelpText>
    <label>Dedup Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>