force-app/main/default/objects/Zoom_Webhook_Event__c/fields/Event_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Event_Timestamp__c</fullName>
    <description>Timing reference.</description>
    <inlineHelpText>Event occurrence time.</inlineHelpText>
    <label>Event Timestamp</label>
    <type>DateTime</type>
</CustomField>