force-app/main/default/objects/Zoom_Webhook_Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>Primary classification.</description>
    <inlineHelpText>Zoom event type.</inlineHelpText>
    <label>Event Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>