force-app/main/default/objects/Zoom_Webhook_Event__c/fields/Meeting_Topic__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Topic__c</fullName>
    <description>Used for mapping.</description>
    <inlineHelpText>Meeting title.</inlineHelpText>
    <label>Meeting Topic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>