force-app/main/default/objects/Zoom_Webhook_Event__c/fields/Meeting_UUID__c.field-meta.xml
<CustomField>
    <fullName>Meeting_UUID__c</fullName>
    <description>Core event reference.</description>
    <inlineHelpText>Unique meeting identifier.</inlineHelpText>
    <label>Meeting UUID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>