force-app/main/default/objects/Zoom_Webhook_Event__c/fields/Processing_Message__c.field-meta.xml
<CustomField>
    <fullName>Processing_Message__c</fullName>
    <description>Stores outcome messages.</description>
    <inlineHelpText>Status details.</inlineHelpText>
    <label>Processing Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>