force-app/main/default/objects/Zoom_Webhook_Event__c/fields/Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>Processing_Status__c</fullName>
    <description>Tracks lifecycle.</description>
    <inlineHelpText>Current processing state.</inlineHelpText>
    <label>Processing Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Skipped - Duplicate</fullName>
            </value>
            <value>
                <fullName>Skipped - Inactive</fullName>
            </value>
            <value>
                <fullName>Skipped - Validation</fullName>
            </value>
            <value>
                <fullName>Failed - No Meeting Mapping</fullName>
            </value>
            <value>
                <fullName>Failed - Invalid Project</fullName>
            </value>
            <value>
                <fullName>Completed - No Attendees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>