force-app/main/default/objects/Zoom_Webhook_Event__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Mapping result.</description>
    <inlineHelpText>Resolved project.</inlineHelpText>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipName>Zoom_Webhook_Event</relationshipName>
    <type>Lookup</type>
</CustomField>