force-app/main/default/objects/Zoom_Webhook_Event__c/fields/Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Retry_Count__c</fullName>
    <description>Outcome metric.</description>
    <inlineHelpText>Retry attempts.</inlineHelpText>
    <label>Retry Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>