force-app/main/default/objects/Zoom_Webhook_Event__c/fields/Time_Entries_Created__c.field-meta.xml
<CustomField>
    <fullName>Time_Entries_Created__c</fullName>
    <description>Outcome metric.</description>
    <inlineHelpText>Tracks retries.</inlineHelpText>
    <label>Time Entries Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>